--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <title>Run Buddy</title>
+
+    <!-- <style>
+        body {
+          background-color: tomato;
+        }h1 {
+      font-size: 100px;
+    }  
+    </style> -->
 </head>
 <body>
     <header>
