--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
             <p>Fill out this form and one of our trainers will schedule a consult</p>
             <form>
                 <label for="name">Enter full name:</label>
-                <input type="text" name="name" id="name" placeholder="Your Name" />
+                <input type="text" name="name" id="name" class = "form-input" placeholder="Your Name" />
 
                 <label for="name">Enter email address:</label>
-                <input type="email" name="email" id="email" placeholder="Email Address" />
+                <input type="email" name="email" id="email" class = "form-input" placeholder="Email Address" />
 
                 <label for="name">Enter a telephone number:</label>
-                <input type="tel" name="phone" id="phone" placeholder="Phone Number" />
+                <input type="tel" name="phone" id="phone" class = "form-input" placeholder="Phone Number" />
 
                 <p>Have you worked out with a trainer before?
                     <input type="radio" name="trainer-confirm" id="trainer-yes" />
