--- a/index.html
+++ b/index.html
@@ -32,20 +32,20 @@
             </ul>
         </nav>
     </header>
-    
+
     <section class="hero-image">
         <div class="hero-form">
             <h3>Get Started Today</h3>
             <p>Fill out this form and one of our trainers will schedule a consult</p>
             <form>
                 <label for="name">Enter full name:</label>
-                <input type="text" name="name" id="name" class = "form-input" placeholder="Your Name" />
+                <input type="text" name="name" id="name" class="form-input" placeholder="Your Name" />
 
                 <label for="name">Enter email address:</label>
-                <input type="email" name="email" id="email" class = "form-input" placeholder="Email Address" />
+                <input type="email" name="email" id="email" class="form-input" placeholder="Email Address" />
 
                 <label for="name">Enter a telephone number:</label>
-                <input type="tel" name="phone" id="phone" class = "form-input" placeholder="Phone Number" />
+                <input type="tel" name="phone" id="phone" class="form-input" placeholder="Phone Number" />
 
                 <p>Have you worked out with a trainer before?
                     <input type="radio" name="trainer-confirm" id="trainer-yes" />
@@ -65,23 +65,50 @@
             </form>
         </div>
     </section>
-
-    <section>
+    <!-- What we do section -->
+    <section id="what-we-do">
         <h2 id="what-we-do">What We Do</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo et esse repellat ullam voluptate! Qui
+            aliquam ullam doloribus cum pariatur. Repudiandae soluta obcaecati est consequatur quisquam aliquid ipsam
+            cupiditate pariatur. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe, possimus.
+            Exercitationem, fugit dolore nostrum, maxime tenetur officia, est consectetur repellat omnis veniam hic
+            pariatur cumque alias voluptatem illo quod ea! Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Libero modi recusandae praesentium quisquam reprehenderit est accusantium tenetur, dolorem quos nobis,
+            pariatur eaque. Deleniti placeat harum quas distinctio aut voluptatibus autem?</p>
     </section>
-
-    <section>
+    <!-- What you do section -->
+    <section id="what-you-do">
         <h2 id="what-you-do">What You Do</h2>
+        <div>
+            <img src="./assests/images/step-1.svg" alt="">
+            <h3>Step 1: Fill Out The Form Above</h3>
+            <p>You're already here, so why not?</p>
+        </div>
+        <div>
+            <img src="./assests/images/step-2.svg" alt="">
+            <h3>Step 2: Consult with One of Our Trainers.</h3>
+            <p>Are you here to build muscle, lose weight, or just feel good?</p>
+        </div>
+        <div>
+            <img src="./assests/images/step-3.svg" alt="">
+            <h3>Step 3: Get Running.</h3>
+            <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+        </div>
+        <div>
+            <img src="./assests/images/step-4.svg" alt="">
+            <h3>Step 4: See Results.</h3>
+            <p>Bi-weekly checkins with your trainer will keep you focused</p>
+        </div>
     </section>
-
-    <section>
+    <!-- Your trainers section -->
+    <section id="your-trainers">
         <h2 id="your-trainers">Meet The Trainers</h2>
     </section>
-
-    <section>
+    <!-- Reach out section -->
+    <section id="reach-out">
         <h2 id="reach-out">Reach Out</h2>
     </section>
-
+    <!-- Footer section -->
     <footer>
         <h2>❤️ Made with love by Run Buddy</h2>
         <div>
