--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
     </section>
     <!-- What we do section -->
-    <section id="what-we-do">
+    <section id="what-we-do" class="intro">
         <h2 id="what-we-do">What We Do</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo et esse repellat ullam voluptate! Qui
             aliquam ullam doloribus cum pariatur. Repudiandae soluta obcaecati est consequatur quisquam aliquid ipsam
