meet the trainers section

--- a/index.html
+++ b/index.html
@@ -104,34 +104,51 @@
     </section>
 
     <!-- Your trainers section -->
-    <section id="your-trainers">
-        <h2 class="section-title primary-border" id="your-trainers">Meet The Trainers</h2>
-        <div>
+    <section id="your-trainers" class="trainers">
+        <h2 class="section-title primary-border">Meet The Trainers</h2>
+        <!-- First Trainer section -->
+        <article class="trainer">
             <img src="./assests/images/trainer-1.jpg" alt="First trainer image">
-            <h3>Arron Stephens</h3>
-            <h4>Speed/Strength</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel doloribus libero ipsa assumenda labore
-                voluptas similique atque iste? Quisquam neque incidunt odio iure facere quod ea sequi! Eaque, aspernatur
-                voluptate!
-            </p>
-        </div>
-        <div>
+            <div class="trainer-bio text-left">
+                <h3>Arron Stephens</h3>
+                <h4>Speed / Strength</h4>
+                <p class="text-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel doloribus libero ipsa
+                    assumenda labore
+                    voluptas similique atque iste? Quisquam neque incidunt odio iure facere quod ea sequi! Eaque,
+                    aspernatur
+                    voluptate!
+                </p>
+            </div>
+        </article>
+
+        <!-- Second trainer section -->
+        <article class="trainer">
+            <div class="trainer-bio text-right">
+                <h3>Joanna Gill</h3>
+                <h4>Endurance</h4>
+                <p class="text-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel doloribus libero ipsa
+                    assumenda labore
+                    voluptas similique atque iste? Quisquam neque incidunt odio iure facere quod ea sequi! Eaque, aspernatur
+                    voluptate!
+                </p>
+            </div> 
             <img src="./assests/images/trainer-2.jpg" alt="Second trainer image">
-            <h3>Joanna Gill</h3>
-            <h4>Endurance</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel doloribus libero ipsa assumenda labore
-                voluptas similique atque iste? Quisquam neque incidunt odio iure facere quod ea sequi! Eaque, aspernatur
-                voluptate!
-            </p>
-        </div><div>
+        </article>
+
+        <!-- Third trainer section -->
+        <article class="trainer">
             <img src="./assests/images/trainer-3.jpg" alt="Third trainer image">
-            <h3>Harry "The Headband" Smith</h3>
-            <h4>Strength</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel doloribus libero ipsa assumenda labore
-                voluptas similique atque iste? Quisquam neque incidunt odio iure facere quod ea sequi! Eaque, aspernatur
-                voluptate!
-            </p>
-        </div>
+            <div class="trainer-bio text-left">
+                <h3>Harry "The Headband" Smith</h3>
+                <h4>Strength</h4>
+                <p class="text-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel doloribus libero ipsa
+                    assumenda labore
+                    voluptas similique atque iste? Quisquam neque incidunt odio iure facere quod ea sequi! Eaque, aspernatur
+                    voluptate!
+                </p>
+            </div>
+            
+        </article>
     </section>
 
     <!-- Reach out section -->
