--- a/index.html
+++ b/index.html
@@ -128,10 +128,11 @@
                 <h4>Endurance</h4>
                 <p class="text-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel doloribus libero ipsa
                     assumenda labore
-                    voluptas similique atque iste? Quisquam neque incidunt odio iure facere quod ea sequi! Eaque, aspernatur
+                    voluptas similique atque iste? Quisquam neque incidunt odio iure facere quod ea sequi! Eaque,
+                    aspernatur
                     voluptate!
                 </p>
-            </div> 
+            </div>
             <img src="./assests/images/trainer-2.jpg" alt="Second trainer image">
         </article>
 
@@ -143,17 +144,37 @@
                 <h4>Strength</h4>
                 <p class="text-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel doloribus libero ipsa
                     assumenda labore
-                    voluptas similique atque iste? Quisquam neque incidunt odio iure facere quod ea sequi! Eaque, aspernatur
+                    voluptas similique atque iste? Quisquam neque incidunt odio iure facere quod ea sequi! Eaque,
+                    aspernatur
                     voluptate!
                 </p>
             </div>
-            
+
         </article>
     </section>
 
     <!-- Reach out section -->
     <section id="reach-out">
         <h2 class="section-title" id="reach-out">Reach Out</h2>
+        <div class="contact-info">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d50470.028468710814!2d-122.47261940678484!3d37.757762678334515!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80859a6d00690021%3A0x4a501367f076adff!2sSan%20Francisco%2C%20CA!5e0!3m2!1sen!2sus!4v1647925181879!5m2!1sen!2sus"
+                width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <h3>Run Buddy</h3>
+            <p>
+                Any questions or concerns before signing up?
+                <br/>
+                Let us know and we'll be happy to talk to you!
+            </p>
+            <address>
+                55 Main Street <br/>
+                Some Town, Ca <br/>
+                12345<br />
+                P: 555.RUN.BUDZ (555.786.2839)<br/>
+                E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+              </address>    
+        </div>
+
     </section>
 
     <!-- Footer section -->
