--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         <h2>❤️ Made with love by Run Buddy</h2>
         <div>
             <!-- <br/>, whatever comes after it will be on the next line -->
-            <a href="#">Read Our Privacy Policy</a><br />
+            <a href="privacy.html">Read Our Privacy Policy</a><br />
             &copy; 2019 Run Buddy, Inc.
         </div>
     </footer>
