--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>
-            <a href="/">RUN BUDDY</a>
+            <a href="#">RUN BUDDY</a>
         </h1>
         <nav>
             <!-- Unordered list element -->
@@ -69,13 +69,9 @@
     <!-- What we do section -->
     <section id="what-we-do" class="intro">
         <h2 class="section-title primary-border" id="what-we-do">What We Do</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo et esse repellat ullam voluptate! Qui
-            aliquam ullam doloribus cum pariatur. Repudiandae soluta obcaecati est consequatur quisquam aliquid ipsam
-            cupiditate pariatur. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe, possimus.
-            Exercitationem, fugit dolore nostrum, maxime tenetur officia, est consectetur repellat omnis veniam hic
-            pariatur cumque alias voluptatem illo quod ea! Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Libero modi recusandae praesentium quisquam reprehenderit est accusantium tenetur, dolorem quos nobis,
-            pariatur eaque. Deleniti placeat harum quas distinctio aut voluptatibus autem?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo et esse repellat ullam voluptate! Qui aliquam ullam doloribus cum pariatur. Repudiandae soluta obcaecati est consequatur quisquam aliquid ipsam cupiditate pariatur. Lorem ipsum
+            dolor, sit amet consectetur adipisicing elit. Saepe, possimus. Exercitationem, fugit dolore nostrum, maxime tenetur officia, est consectetur repellat omnis veniam hic pariatur cumque alias voluptatem illo quod ea! Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Libero modi recusandae praesentium quisquam reprehenderit est accusantium tenetur, dolorem quos nobis, pariatur eaque. Deleniti placeat harum quas distinctio aut voluptatibus autem?</p>
     </section>
 
     <!-- What you do section -->
@@ -112,11 +108,7 @@
             <div class="trainer-bio text-left">
                 <h3>Arron Stephens</h3>
                 <h4>Speed / Strength</h4>
-                <p class="text-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel doloribus libero ipsa
-                    assumenda labore
-                    voluptas similique atque iste? Quisquam neque incidunt odio iure facere quod ea sequi! Eaque,
-                    aspernatur
-                    voluptate!
+                <p class="text-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel doloribus libero ipsa assumenda labore voluptas similique atque iste? Quisquam neque incidunt odio iure facere quod ea sequi! Eaque, aspernatur voluptate!
                 </p>
             </div>
         </article>
@@ -126,11 +118,7 @@
             <div class="trainer-bio text-right">
                 <h3>Joanna Gill</h3>
                 <h4>Endurance</h4>
-                <p class="text-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel doloribus libero ipsa
-                    assumenda labore
-                    voluptas similique atque iste? Quisquam neque incidunt odio iure facere quod ea sequi! Eaque,
-                    aspernatur
-                    voluptate!
+                <p class="text-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel doloribus libero ipsa assumenda labore voluptas similique atque iste? Quisquam neque incidunt odio iure facere quod ea sequi! Eaque, aspernatur voluptate!
                 </p>
             </div>
             <img src="./assests/images/trainer-2.jpg" alt="Second trainer image">
@@ -142,11 +130,7 @@
             <div class="trainer-bio text-left">
                 <h3>Harry "The Headband" Smith</h3>
                 <h4>Strength</h4>
-                <p class="text-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel doloribus libero ipsa
-                    assumenda labore
-                    voluptas similique atque iste? Quisquam neque incidunt odio iure facere quod ea sequi! Eaque,
-                    aspernatur
-                    voluptate!
+                <p class="text-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel doloribus libero ipsa assumenda labore voluptas similique atque iste? Quisquam neque incidunt odio iure facere quod ea sequi! Eaque, aspernatur voluptate!
                 </p>
             </div>
 
@@ -157,15 +141,13 @@
     <section id="reach-out" class="contact">
         <h2 class="contact secondary-border" id="reach-out">Reach Out</h2>
         <div class="contact-info">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d50470.028468710814!2d-122.47261940678484!3d37.757762678334515!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80859a6d00690021%3A0x4a501367f076adff!2sSan%20Francisco%2C%20CA!5e0!3m2!1sen!2sus!4v1647925181879!5m2!1sen!2sus"
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d50470.028468710814!2d-122.47261940678484!3d37.757762678334515!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80859a6d00690021%3A0x4a501367f076adff!2sSan%20Francisco%2C%20CA!5e0!3m2!1sen!2sus!4v1647925181879!5m2!1sen!2sus"
                 width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             <div>
                 <h3>Run Buddy</h3>
                 <p>
                     Any questions or concerns before signing up?
-                    <br />
-                    Let us know and we'll be happy to talk to you!
+                    <br /> Let us know and we'll be happy to talk to you!
                 </p>
                 <address>
                     55 Main Street <br />
@@ -184,8 +166,7 @@
         <h2>❤️ Made with love by Run Buddy</h2>
         <div>
             <!-- <br/>, whatever comes after it will be on the next line -->
-            <a href="privacy.html">Read Our Privacy Policy</a><br />
-            &copy; 2019 Run Buddy, Inc.
+            <a href="privacy.html">Read Our Privacy Policy</a><br /> &copy; 2019 Run Buddy, Inc.
         </div>
     </footer>
 
