add content to hero, replace image

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
     </header>
 
     <section class="hero-image">
+        <h2>Start Building Habits</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, aliquam labore ipsam voluptatibus amet pariatur optio nisi itaque facilis temporibus nam sapiente ab, repellendus omnis eaque! Blanditiis facere rem aut?Lorem ipsum dolor, sit amet
+            consectetur adipisicing elit. Dolor, nisi aspernatur. Eius similique quisquam accusamus omnis rem. Praesentium fugiat magnam velit cumque qui a ullam vel, recusandae mollitia accusantium ratione.
+        </p>
         <div class="hero-form">
             <h3>Get Started Today</h3>
             <p>Fill out this form and one of our trainers will schedule a consult</p>
