--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </nav>
     </header>
 
-    <section class="hero-image">
+    <section class="hero-image hero-cta">
         <h2>Start Building Habits</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, aliquam labore ipsam voluptatibus amet pariatur optio nisi itaque facilis temporibus nam sapiente ab, repellendus omnis eaque! Blanditiis facere rem aut?Lorem ipsum dolor, sit amet
             consectetur adipisicing elit. Dolor, nisi aspernatur. Eius similique quisquam accusamus omnis rem. Praesentium fugiat magnam velit cumque qui a ullam vel, recusandae mollitia accusantium ratione.
