add flexbox to hero

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     </header>
 
     <section class="hero-image hero-cta">
+      <!-- <div class="flex-row">
+
+      </div> -->
         <h2>Start Building Habits</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, aliquam labore ipsam voluptatibus amet pariatur optio nisi itaque facilis temporibus nam sapiente ab, repellendus omnis eaque! Blanditiis facere rem aut?Lorem ipsum dolor, sit amet
             consectetur adipisicing elit. Dolor, nisi aspernatur. Eius similique quisquam accusamus omnis rem. Praesentium fugiat magnam velit cumque qui a ullam vel, recusandae mollitia accusantium ratione.
@@ -72,15 +75,25 @@
 
     <!-- What we do section -->
     <section id="what-we-do" class="intro">
-        <h2 class="section-title primary-border" id="what-we-do">What We Do</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo et esse repellat ullam voluptate! Qui aliquam ullam doloribus cum pariatur. Repudiandae soluta obcaecati est consequatur quisquam aliquid ipsam cupiditate pariatur. Lorem ipsum
+      <div class="flex-row">
+        <h2 class="section-title primary-border" id="what-we-do">
+          What We Do
+        </h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo et esse repellat ullam voluptate! Qui aliquam ullam doloribus cum pariatur. Repudiandae soluta obcaecati est consequatur quisquam aliquid ipsam cupiditate pariatur. Lorem ipsum
             dolor, sit amet consectetur adipisicing elit. Saepe, possimus. Exercitationem, fugit dolore nostrum, maxime tenetur officia, est consectetur repellat omnis veniam hic pariatur cumque alias voluptatem illo quod ea! Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Libero modi recusandae praesentium quisquam reprehenderit est accusantium tenetur, dolorem quos nobis, pariatur eaque. Deleniti placeat harum quas distinctio aut voluptatibus autem?</p>
+            consectetur adipisicing elit. Libero modi recusandae praesentium quisquam reprehenderit est accusantium tenetur, dolorem quos nobis, pariatur eaque. Deleniti placeat harum quas distinctio aut voluptatibus autem?
+          </p>
+      </div>
     </section>
 
     <!-- What you do section -->
     <section id="what-you-do" class="steps">
-        <h2 class="section-title secondary-border" id="what-you-do">What You Do</h2>
+      <div class="flex-row">
+        <h2 class="section-title secondary-border" id="what-you-do">
+          What You Do
+        </h2>
+      </div>
         <div>
             <img src="./assests/images/step-1.svg" alt="">
             <h3>Step 1: <span>Fill Out The Form Above</span></h3>
@@ -105,7 +118,11 @@
 
     <!-- Your trainers section -->
     <section id="your-trainers" class="trainers">
-        <h2 class="section-title primary-border">Meet The Trainers</h2>
+      <div class="flex-row">
+        <h2 class="section-title primary-border">
+          Meet The Trainers
+        </h2>
+      </div>
         <!-- First Trainer section -->
         <article class="trainer">
             <img src="./assests/images/trainer-1.jpg" alt="First trainer image">
