--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
 
     <section class="hero-image hero-cta">
-      <!-- <div class="flex-row">
+        <!-- <div class="flex-row">
 
       </div> -->
         <h2>Start Building Habits</h2>
@@ -75,54 +75,90 @@
 
     <!-- What we do section -->
     <section id="what-we-do" class="intro">
-      <div class="flex-row">
-        <h2 class="section-title primary-border" id="what-we-do">
-          What We Do
-        </h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo et esse repellat ullam voluptate! Qui aliquam ullam doloribus cum pariatur. Repudiandae soluta obcaecati est consequatur quisquam aliquid ipsam cupiditate pariatur. Lorem ipsum
-            dolor, sit amet consectetur adipisicing elit. Saepe, possimus. Exercitationem, fugit dolore nostrum, maxime tenetur officia, est consectetur repellat omnis veniam hic pariatur cumque alias voluptatem illo quod ea! Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Libero modi recusandae praesentium quisquam reprehenderit est accusantium tenetur, dolorem quos nobis, pariatur eaque. Deleniti placeat harum quas distinctio aut voluptatibus autem?
-          </p>
-      </div>
+        <div class="flex-row">
+            <h2 class="section-title primary-border" id="what-we-do">
+                What We Do
+            </h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo et esse repellat ullam voluptate! Qui aliquam ullam doloribus cum pariatur. Repudiandae soluta obcaecati est consequatur quisquam aliquid ipsam cupiditate pariatur. Lorem ipsum dolor,
+                sit amet consectetur adipisicing elit. Saepe, possimus. Exercitationem, fugit dolore nostrum, maxime tenetur officia, est consectetur repellat omnis veniam hic pariatur cumque alias voluptatem illo quod ea! Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Libero modi recusandae praesentium quisquam reprehenderit est accusantium tenetur, dolorem quos nobis, pariatur eaque. Deleniti placeat harum quas distinctio aut voluptatibus autem?
+            </p>
+        </div>
     </section>
+
 
     <!-- What you do section -->
     <section id="what-you-do" class="steps">
-      <div class="flex-row">
-        <h2 class="section-title secondary-border" id="what-you-do">
-          What You Do
-        </h2>
-      </div>
-        <div>
-            <img src="./assests/images/step-1.svg" alt="">
-            <h3>Step 1: <span>Fill Out The Form Above</span></h3>
-            <p>You're already here, so why not?</p>
+        <div class="flex-row">
+            <h2 class="section-title secondary-border" id="what-you-do">
+                What You Do
+            </h2>
         </div>
         <div>
-            <img src="./assests/images/step-2.svg" alt="">
-            <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
-            <p>Are you here to build muscle, lose weight, or just feel good?</p>
+            <!--Step 1 -->
+            <div class="step">
+                <h3>Step 1.</h3>
+                <div class="step-info">
+                    <div class="step-img">
+                        <img src="./assests/images/step-1.svg" alt="">
+                    </div>
+                    <div class="step-text">
+                        <h4>Fill Out Form Above</h4>
+                        <p>You're already here, so why not?</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Step 2 -->
+            <div class="step">
+                <h3>Step 2.</h3>
+                <div class="step-info">
+                    <div class="step-img">
+                        <img src="./assests/images/step-2.svg" alt="">
+                    </div>
+                </div>
+                <div class="step-text">
+                    <h4>Consult with One of Our Trainers.</h4>
+                    <p>Are you here to build muscle, lose weight, or just feel good?</p>
+                </div>
+            </div>
+            <!-- Step 3 -->
+            <div class="step">
+                <h3>Step 3.</h3>
+                <div class="step-info">
+                    <div class="step-img">
+                        <img src="./assests/images/step-3.svg" alt="">
+                    </div>
+                </div>
+                <div class="step-text">
+                    <h4>Get Running.</h4>
+                    <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+                </div>
+            </div>
+            <!-- Step 4 -->
+            <div class="step">
+                <h3>Step 4.</h3>
+                <div class="step-info">
+                    <div class="step-img">
+                        <img src="./assests/images/step-4.svg" alt="">
+                    </div>
+                </div>
+                <div class="step-text">
+                    <h4>See Results.</h4>
+                    <p>Bi-weekly checkins with your trainer will keep you focused</p>
+                </div>
+            </div>
         </div>
-        <div>
-            <img src="./assests/images/step-3.svg" alt="">
-            <h3>Step 3: <span>Get Running.</span></h3>
-            <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
-        </div>
-        <div>
-            <img src="./assests/images/step-4.svg" alt="">
-            <h3>Step 4: <span>See Results.</span></h3>
-            <p>Bi-weekly checkins with your trainer will keep you focused</p>
-        </div>
+
     </section>
 
     <!-- Your trainers section -->
     <section id="your-trainers" class="trainers">
-      <div class="flex-row">
-        <h2 class="section-title primary-border">
-          Meet The Trainers
-        </h2>
-      </div>
+        <div class="flex-row">
+            <h2 class="section-title primary-border">
+                Meet The Trainers
+            </h2>
+        </div>
         <!-- First Trainer section -->
         <article class="trainer">
             <img src="./assests/images/trainer-1.jpg" alt="First trainer image">
