--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./assests/css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Run Buddy</title>
 </head>
 
@@ -33,7 +34,7 @@
         </nav>
     </header>
 
-    <section class="hero-image hero-cta">
+    <section class="hero-image">
         <div class="hero-cta">
             <h2>Start Building Habits</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, aliquam labore ipsam voluptatibus amet pariatur optio nisi itaque facilis temporibus nam sapiente ab, repellendus omnis eaque! Blanditiis facere rem aut?Lorem ipsum dolor, sit amet
