--- a/privacy.html
+++ b/privacy.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./assests/css/secondary-style.css">
     <link rel="stylesheet" href="./assests/css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Privacy Policy - Run Buddy</title>
 </head>
 
