--- a/index.html
+++ b/index.html
@@ -221,7 +221,9 @@
 
     <!-- Reach out section -->
     <section id="reach-out" class="contact">
-        <h2 class="contact secondary-border" id="reach-out">Reach Out</h2>
+        <div class="flex-row">
+            <h2 class="contact secondary-border" id="reach-out">Reach Out</h2>
+        </div>
         <div class="contact-info">
             <div>
                 <h3>Run Buddy</h3>
